--- a/src/scss/layout/adjustment.scss
+++ b/src/scss/layout/adjustment.scss
@@ -12,6 +12,11 @@ body {
   overflow: hidden;
 }
 
+// .container--static {
+//   width: 1005px;
+//   margin: 0 auto;
+// };
+
 .container {
   width: 1005px;
   margin: 0 auto;
