--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -5,7 +5,7 @@ html(lang="ru")
     head
         meta(charset="UTF-8")
         title #{title}
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(name="viewport", content="width=1350, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&amp;subset=cyrillic" rel="stylesheet")
         link(rel="stylesheet", href="assets/css/main.min.css")
