--- a/src/templates/components/2fa.pug
+++ b/src/templates/components/2fa.pug
@@ -1,8 +1,8 @@
 .settings__info.settings__qr-info
   p.
-    Установите на свой мобильный телефон приложение google Authenticator,
-    сканируйте QR код ниже или используйте ручной ввод.
-    Введите полученный одноразовый код, в соответствующее поле
+    Установите на Ваше устройство приложение Google Authenticator, после этого
+    отсканируйте QR-код ниже либо используйте ручной ввод.<br>
+    Введите полученный одноразовый код в поле ниже.
 
 .settings__2fa
   .settings__qr.qr
