--- a/src/templates/components/footer.pug
+++ b/src/templates/components/footer.pug
@@ -1,4 +1,4 @@
-footer.footer(class=`${footerCls}`)
+footer.footer
   .footer__top
     .container
       .footer__left
@@ -16,7 +16,7 @@ footer.footer(class=`${footerCls}`)
 
   .footer__bottom
     .container
-      .footer__copyrights.copyrights Все права под защитой, копирование запрещено / design by fleetch
+      .footer__copyrights.copyrights Информация, представленная на настоящем сайте является интеллектуальной собственностью Diperia RolePlay
       .footer__socials.socials
         .footer__socials.socials
           ul.socials__list
