--- a/src/templates/components/nick-form.pug
+++ b/src/templates/components/nick-form.pug
@@ -1,8 +1,10 @@
 .settings__info
-  p Обратите внимание, что никнейм должен соответствовать
-  a(href="#") правилам нашего сервера 
-  p Формат никнейма, должен быть следующем : Имя_Фамилия на латинице. Запрещено использовать имена известных личностей.
-
+  p Обращаем Ваше внимание, что никнейм должен соответствовать
+  a(href="#") правилам RolePlay ников.
+  p.
+    Формат никнейма: Имя_Фамилия на латинице. Запрещено использовать никнеймы, содержащие оскорбления, нецензурную лексику и их завуалированные аналоги.
+  p.accent.
+    В случае, если Ваш никнейм не соответствует правилам, он может быть изменён принудительно.
 .settings__form.form
   form.form__inner#nick(method="post" action="")
     .form__cont
