--- a/src/templates/pages/settings.pug
+++ b/src/templates/pages/settings.pug
@@ -13,11 +13,11 @@ block content
       .settings__cont
         .settings__nav
           ul.settings__nav-list
-            li.settings__nav-item.settings__nav-item--active Смена пароля
-            li.settings__nav-item Установка 2FA
-            li.settings__nav-item Смена почты
-            li.settings__nav-item Смена ника
-            li.settings__nav-item Активность
+            li.settings__nav-item#pass-item.settings__nav-item--active Смена пароля
+            li.settings__nav-item#2fa-item Установка 2FA
+            li.settings__nav-item#mail-item Смена почты
+            li.settings__nav-item#nick-item Смена ника
+            li.settings__nav-item#activity-item Активность
 
         .settings__inner
           ul.settings__inner-list
