--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -7,6 +7,10 @@
       filter: grayscale(0%);
     }
   }
+
+  .nav__item {
+    margin-right: 63px;
+  };
 }
 
 .footer__top {
@@ -19,12 +23,13 @@
 }
 
 .footer__bottom {
-  padding: 9px 0;
+  padding: 7px 0;
   background-color: #0f0f11;
 
   .container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 }
 
@@ -32,6 +37,8 @@
   color: #fff;
   opacity: .45;
   font-size: 14px;
+  width: 450px;
+  line-height: 16px;
 }
 
 .socials__list {
@@ -60,28 +67,4 @@
 .socials__img {
   fill: #fff;
   height: 20px;
-}
-
-.footer--landing,
-.header--landing {
-  .nav__link {
-    &::after {
-      bottom: -4px;
-      height: 4px;
-      width: 0;
-      border-radius: 15px;
-      background-color: #c63232;
-    }
-
-    &--active,
-    &:hover {
-      &::before {
-        background: radial-gradient(100% 100%, #c63232, #c63232 12%, transparent 50%);
-      }
-
-      &::after {
-        width: 95%;
-      }
-    }
-  }
 }
