--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,14 +1,14 @@
 .header,
 .footer {
   background-color: #161e21;
-
-  * {
-    white-space: nowrap;
-  };
 };
 
 .header {
   margin-bottom: 60px;
+
+  * {
+    white-space: nowrap;
+  };
 
   .container {
     padding: 20px 0;
@@ -29,9 +29,14 @@
   align-items: center;
 };
 
+.header__nav {
+  display: flex;
+  align-items: center;
+}
+
 .nav__list {
   display: flex;
-  flex-wrap: wrap;
+  margin-right: 20px;
 };
 
 .logo {
@@ -78,7 +83,7 @@
 }
 
 .nav__item {
-  margin-right: 63px;
+  margin-right: 40px;
   position: relative;
 
   &:last-child {
@@ -110,15 +115,15 @@
     content: '';
     display: block;
     position: absolute;
-    bottom: -15px;
+    bottom: -4px;
     left: 50%;
     transform: translateX(-50%);
-    width: 11px;
-    height: 11px;
-    background-color: transparent;
+    width: 0;
+    height: 4px;
+    background-color: #c63232;
     transition: .3s;
     text-align: center;
-    border-radius: 3px;
+    border-radius: 15px;
   }
 
   &--active,
@@ -128,11 +133,24 @@
     position: relative;
 
     &::before {
-      background: radial-gradient(100% 100%, #fff, #fff 12%, transparent 50%);
+      background: radial-gradient(100% 100%, #c63232, #c63232 12%, transparent 50%);
     }
 
     &::after {
-      background-color: #c63232;
+      width: 95%;
     }
   }
 };
+
+.header__profile-link {
+  color: #fff;
+  background-color: #c63232;
+  padding: 7px 17px;
+  border-radius: 5px;
+  transition: .3s;
+
+  &:hover {
+    text-decoration: none;
+    background-color: darken($color: #c63232, $amount: 7%);
+  }
+}
