--- a/src/scss/layout/adjustment.scss
+++ b/src/scss/layout/adjustment.scss
@@ -8,16 +8,11 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  // min-height: 100%;
   overflow: hidden;
 }
 
-// .container--static {
-//   width: 1005px;
-//   margin: 0 auto;
-// };
-
 .container {
-  width: 1005px;
+  width: 1030px;
   margin: 0 auto;
 };
