--- a/src/templates/components/activity.pug
+++ b/src/templates/components/activity.pug
@@ -1,35 +1,47 @@
 .settings__info.settings__activity-info
-  p В данном разделе, показанна активность игрового аккаунта за последние 7 дней.
+  p.
+    В данном разделе показана статистика последних пяти действий с аккаунтом.
+    В случае обнаружения подозрительной активности <span class="accent">немедленно</span> измените Ваш пароль
 
 .settings__activity.activity
   ul.activity__list
 
     li.activity__item.activity__item--autorization
       span.activity__icon
-      span.activity__act Авторизация с ip адресса 192.168.0.1
-      span.activity__time Сегодня: 21:00
+      .acivity__top
+        span.activity__act IP адресс: 192.168.0.1
+        span.activity__time авторизация 01.06.2018 в 01:31
+      .activity__bottom Нижний Новгород, Россия
+      .activity__red-dot.activity__red-dot--active
 
     li.activity__item.activity__item--donat
       span.activity__icon
-      span.activity__act Пополнение игрового счета на 500 рублей
-      span.activity__time Сегодня: 21:00
+      .acivity__top
+        span.activity__act Пополнение игрового счета аккаунта на 50 рублей
+        span.activity__time Остаток: 81 рубль
+      .activity__bottom с помощью платёжной системы QIWI Кошелёк
+      .activity__red-dot
 
     li.activity__item.activity__item--autorization
       span.activity__icon
-      span.activity__act Авторизация с ip адресса 192.168.0.1
-      span.activity__time Сегодня: 21:00
+      .acivity__top
+        span.activity__act IP адресс: 192.168.0.1
+        span.activity__time авторизация 31.05.2018 в 23:49
+      .activity__bottom Нижний Новгород, Россия
+      .activity__red-dot
 
     li.activity__item.activity__item--donat
       span.activity__icon
-      span.activity__act Пополнение игрового счета на 500 рублей
-      span.activity__time Сегодня: 21:00
+      .acivity__top
+        span.activity__act Покупака донат услуги «VIP на 7 дней»
+        span.activity__time Остаток: 31 рубль
+      .activity__bottom с помощью внутриигрового магазина (/donate)
+      .activity__red-dot
 
     li.activity__item.activity__item--autorization
       span.activity__icon
-      span.activity__act Авторизация с ip адресса 192.168.0.1
-      span.activity__time Сегодня: 21:00
-
-    li.activity__item.activity__item--donat
-      span.activity__icon
-      span.activity__act Пополнение игрового счета на 500 рублей
-      span.activity__time Сегодня: 21:00
+      .acivity__top
+        span.activity__act IP адресс: 192.168.0.1
+        span.activity__time авторизация 31.05.2018 в 19:17
+      .activity__bottom Нижний Новгород, Россия
+      .activity__red-dot
