--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -3,7 +3,7 @@ block vars
 header.header(class=`${cls}`)
   .container
     .header__left
-      a.header__logo.logo(href="#")
+      a.header__logo.logo(href="/")
         img.logo__img(src="./assets/img/logo.png")
         .logo__text
           span.logo__text-top Diperia
@@ -13,9 +13,29 @@ header.header(class=`${cls}`)
     .header__right
       .header__nav.nav
         ul.nav__list
-          li.nav__item
+          li.nav__item#main-item
             .nav__gradient
             a.nav__link.nav__link--active(href="#") Главная
-          each section in sections
-            li.nav__item
-              a.nav__link(href="#") #{section}
+
+          li.nav__item#forum-item
+            .nav__gradient
+            a.nav__link(href="#") Форум
+
+          li.nav__item#play-item
+            .nav__gradient
+            a.nav__link(href="#") Начать играть
+
+          li.nav__item#news-item
+            .nav__gradient
+            a.nav__link(href="#") Новости
+
+          li.nav__item#donat-item
+            .nav__gradient
+            a.nav__link(href="#") Донат
+
+          li.nav__item#help-item
+            .nav__gradient
+            a.nav__link(href="#") Помощь
+
+        .header__profile
+          a.header__profile-link(href="#") Личный кабинет
