--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -8,10 +8,10 @@ html(lang="ru")
         meta(name="viewport", content="width=1350, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&amp;subset=cyrillic" rel="stylesheet")
-        link(rel="stylesheet", href="assets/css/main.min.css")
+        link(rel="stylesheet", href="./assets/css/main.min.css")
 
     body
         div.wrapper
             block content
         
-        //- script(src="./assets/scripts/bandle.js")
+        script(src="./assets/scripts/bandle.js")
