add links & meta

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,6 @@
 @import 'components/**/*.scss';
 
 @import 'pages/**/*.scss';
+
+@import './jquery.formstyler';
+@import './jquery.formstyler.theme';
