--- a/src/templates/pages/profile.pug
+++ b/src/templates/pages/profile.pug
@@ -1,13 +1,14 @@
 extends ../template
 
 block variables
-  - var title = 'Личный кабинет'
+  - var title = 'Diperia RolePlay – Личный кабинет'
 
 block content
   include ../common/vars
   include ../components/header
 
   .main
+    include ../components/help
     .container
       .main__title Личный кабинет
       .main__cont
