--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -2,9 +2,12 @@ doctype html
 html(lang="ru")
   head
     meta(charset="UTF-8")
-    title Diperia
+    title Diperia RolePlay – уникальный CR-MP проект!
     meta(name="viewport", content="width=1350, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    meta(id="aj" name="description" content="Diperia RolePlay - один из самых уникальных проектов в Криминальной России. Интересные работы, разнообразные фракции, интересный путь развития. Заходи и посмотри!")
+    meta(name="keywords" content="diperia, diperia-rp, diperia role play, gta, criminal russia, crmp, cr-mp, gta, rp, roleplay, role play, samp, sa-mp, самп, са-мп, диперия, диперия-рп, диперия роле плей, гта, рп сервер, рп, криминальная россия, крмп, кр-мп, играть бесплатно, игра по сети, сервер, играть в гта, играть в gta, начать, форум, гта 5")
+    link(rel="shortcut icon" href="./assets/img/logo.png" type="image/png")
     link(href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&amp;subset=cyrillic" rel="stylesheet")
     link(rel="stylesheet", href="assets/css/main.min.css")
 
@@ -54,8 +57,7 @@ html(lang="ru")
 
               .start-play__cont
                 img.start-play__img(src="./assets/img/video.jpg")
-                iframe.start-play__video(width="560" height="315" src="https://www.youtube.com/embed/-JHHSbfpFsI?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen)
-            
+
             .start-play__btn Как начать игру?
 
           .main__news.news
