--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -7,6 +7,7 @@ html(lang="ru")
         title #{title}
         meta(name="viewport", content="width=1350, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        link(rel="shortcut icon" href="./assets/img/logo.png" type="image/png")
         link(href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&amp;subset=cyrillic" rel="stylesheet")
         link(rel="stylesheet", href="./assets/css/main.min.css")
 
